# tst_admin_panel

./: README.md  pyproject.toml
tst_admin_panel/: api.py  dp_api.py  hooks.py  modules.txt
tst_admin_panel/fixtures/: workspace.json
tst_admin_panel/tst_admin_panel/doctype/about_us_section/: about_us_section.js  about_us_section.json  about_us_section.py  test_about_us_section.py
tst_admin_panel/tst_admin_panel/doctype/about_us_tab/: about_us_tab.json  about_us_tab.py
tst_admin_panel/tst_admin_panel/doctype/achievement/: achievement.json  achievement.py
tst_admin_panel/tst_admin_panel/doctype/activity_tracker/: activity_tracker.json  activity_tracker.py
tst_admin_panel/tst_admin_panel/doctype/activity_trackers/: activity_trackers.js  activity_trackers.json  activity_trackers.py  test_activity_trackers.py
tst_admin_panel/tst_admin_panel/doctype/banner_section/: banner_section.js  banner_section.json  banner_section.py  test_banner_section.py
tst_admin_panel/tst_admin_panel/doctype/branches_section/: branches_section.js  branches_section.json  branches_section.py  test_branches_section.py
tst_admin_panel/tst_admin_panel/doctype/company_branch/: company_branch.json  company_branch.py
tst_admin_panel/tst_admin_panel/doctype/company_logo/: company_logo.json  company_logo.py
tst_admin_panel/tst_admin_panel/doctype/contact_us/: contact_us.js  contact_us.json  contact_us.py  test_contact_us.py
tst_admin_panel/tst_admin_panel/doctype/device_installations_regions/: device_installations_regions.js  device_installations_regions.json  (+2 more)
(+59 files in other folders)
